Fixed text contrast on components page

--- a/app/globals.css
+++ b/app/globals.css
@@ -60,8 +60,8 @@
 }
 
 .glow-on-hover:hover {
-  box-shadow: 0 0 10px rgba(255, 255, 255, 0.6),
-    0 0 20px rgba(255, 255, 255, 0.4), 0 0 30px rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.6),
+    0 0 15px rgba(255, 255, 255, 0.4), 0 0 15px rgba(255, 255, 255, 0.2);
 }
 
 @keyframes float {
